<resources>

    <string name="activity_name">Radaee PDF Reader</string>
    <string name="launcher_name">Radaee PDF Reader</string>
    <string name="app_name" translatable="false">Radaee Reader</string>

    <string name="failed_invalid_password">Open Failed: Invalid Password</string>
    <string name="failed_invalid_format">Open Failed: Damaged or Invalid PDF file</string>
    <string name="failed_encryption">Open Failed: Unknown Encryption</string>
    <string name="failed_invalid_path">Open Failed: Access denied or Invalid path</string>
    <string name="failed_unknown">Open Failed: Unknown Error</string>
    <string name="please_wait">Please wait</string>
    <string name="no_more_found">No more found</string>

    <string name="thumbnail_creation_running">Thumbnail creation is running…</string>
    <string name="exiting">Exiting</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="annotation_failed">Add annotation failed!</string>
    <string name="cannot_write_or_encrypted">Cannot write or encrypted!</string>
    <string name="copy_text_to_clipboard">Copy text to clipboard</string>
    <string name="highlight_texts">Highlight texts</string>
    <string name="underline">Underline</string>
    <string name="strikeout">StrikeOut</string>
    <string name="squiggly">Squiggly</string>
    <string name="process_selected_text">Process selected text</string>
    <string name="cancel">Cancel</string>
    <string name="no_more_redo">No more redo.</string>
    <string name="no_more_undo">No more undo.</string>
    <string name="pdf_outline">PDF Outlines</string>
    <string name="single_page">Single Page</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="dual_page">Dual Page</string>
    <string name="curl" translatable="false">Curl</string>
    <string name="reflow">Text reflow</string>
    <string name="save_msg">Document modified.\nDo you want to save it?</string>
    <string name="page_change_block">You cannot change page while page is zoomed, Zoom out first!</string>

    <string name="read_only_annotation">Read only annotation</string>
    <string name="note_content">Note Content</string>
    <string name="note_subject">Subject:</string>
    <string name="note_text">Content:</string>
    <string name="show_password">Show password</string>
    <string name="input_password">Input Password</string>
    <string name="loading_pdf">Loading PDF file…</string>
    <string name="browse_open_glfile">Browse And Open File(OpenGL)</string>
    <string name="browse_open_file">Browse And Open File(CPU)</string>
    <string name="view_pager">ViewPager</string>
    <string name="open_asset">Open From Assets (ReadOnly)</string>
    <string name="open_sdcard">Open From sdcard</string>
    <string name="open_http">Open Http Link (INTERNET access)</string>
    <string name="using_RGB_565">RGB_565 (CPU)</string>
    <string name="using_RGB_4444">RGB_4444 (CPU)</string>
    <string name="simple_open_gl">Simple OpenGL</string>
    <string name="curl_pages">Curl Pages</string>
    <string name="advance">Advance</string>
    <string name="create_pdf">CreatePDF</string>
    <string name="javascript">JavaScript</string>
    <string name="about">About</string>

    <string name="ok">OK</string>
    <string name="todo_open_url">todo: open url: </string>
    <string name="todo_java_script">todo: execute java script</string>
    <string name="todo_play_movie">todo: play movie</string>
    <string name="todo_play_sound">todo: play sound</string>
    <string name="todo_attachment">todo: treat attachment</string>
    <string name="todo_3d">todo: play 3D module</string>
    <string name="file_not_exist">File not exists: </string>
    <string name="file_not_exist_error">%1$s not exists or not a file.</string>
    <string name="file_not_opened">Cannot open %1$s.</string>
    <string name="catalog_not_found">Catalog object is not a dictionary.</string>
    <string name="edit_catalog_failed">Edit catalog failed.</string>

    <string name="browser_file_recent" translatable="false">Recent file:</string>
    <string name="browser_file_delete" translatable="false">Delete File</string>
    <string name="browser_file_delete_recent" translatable="false">Remove from recent</string>
    <string name="browser_file_share" translatable="false">Share file</string>
    <string name="browser_file_delete_confirm" translatable="false">Do you want to delete file</string>
    <string name="browser_file_delete_recent_list_confirm" translatable="false">Do you want to clear recent list?</string>


    <string name="no_pdf_outlines">PDF does not contain outlines</string>
    <string name="pdf_print_not_available">PDF File is not available for print.</string>
    <string name="pdf_print_calculation_failed">Page count calculation failed.</string>

    <string name="pdf_share_not_available">PDF File is not available for share.</string>

    <string name="copy_text">Text copied to clipboard: %1$s</string>

    <string name="print">Print</string>
    <string name="share">Share</string>
    <string name="bookmark_label">Page: %1$d</string>
    <string name="bookmark_already_added">Bookmark already exists</string>
    <string name="bookmark_error">Error: Cannot add bookmark</string>
    <string name="bookmark_remove_error">Error: Cannot delete bookmark</string>
    <string name="bookmark_success">Bookmark (%1$s) added successfully.</string>
    <string name="pages_list">Pages List</string>
    <string name="bookmark_add">Add to Bookmarks</string>
    <string name="bookmark_show">Show Bookmarks</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="no_bookmarks">No bookmarks to show</string>
    <string name="loading">Loading…</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="saved_message">Document saved</string>
    <string name="delete_signature_message">A signature is already present, do you want to delete it?</string>
    <string name="warning">Warning</string>
    <string name="no_search_reflow">Search not supported in Reflow mode!</string>

    <string name="sign_title" translatable="false">Set your signature</string>
    <string name="sign_certificate_hand" translatable="false">Handwrite</string>
    <string name="sign_certificate" translatable="false">Certificate:</string>
    <string name="sign_certificate_select" translatable="false">Open</string>
    <string name="sign_certificate_password" translatable="false">Password:</string>
    <string name="sign_select_certificate" translatable="false">Please select cert file:</string>
    <string name="sign_certificate_filetype" translatable="false">File type p12 or pfx</string>
    <string name="sign_is_empty" translatable="false">Signature is empty</string>
    <string name="sign_error_fail_certificate" translatable="false">Sign failed, can\'t open the certificate file.</string>
    <string name="sign_error_fail" translatable="false">Sign failed. General error.</string>


    <string name="annot_perform">Perform</string>
    <string name="annot_edit">poptext</string>
    <string name="annot_remove">remove</string>
    <string name="annot_property">property</string>
    <string name="line_width">Line width</string>
    <string name="line_style">Line style</string>
    <string name="line_color">Line color</string>
    <string name="line_start">Line start</string>
    <string name="line_end">Line end</string>
    <string name="fill_color">Fill color</string>
    <string name="annot_color">Color</string>
    <string name="icon">icon</string>
    <string name="annot_lock">Lock</string>
    <string name="alpha">Alpha</string>

    <string name="tag_recent">Recent</string>
    <string name="tag_files">Files</string>
    <string name="tag_navigate">Navigate</string>
    <string name="txt_no_recent">There is no recent files.</string>
    <string name="txt_files_title">Files on Device:</string>
    <string name="txt_no_files">There is no files on storage.</string>
    <string name="button_ok_label">OK</string>
    <string name="text_cancel_label">Cancel</string>
    <string name="permission_dialog_title">Permission required</string>
    <string name="permission_dialog_content">Due to privacy policy update after Android 11, we also need to update our storage access permission to browse document files. Please click on OK button to authorize us.</string>
    <string name="permission_denied_content">Sorry without necessary permission, some functionalities may be unavailable.</string>
</resources>