<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/txt_icon"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/icon" />

    <com.radaee.annotui.UIIconButton
        android:id="@+id/btn_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/txt_icon"
        android:background="#ffffff"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txt_fcolor"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/fill_color"
        android:layout_below="@id/txt_icon"
        android:layout_marginTop="26dp" />

    <com.radaee.annotui.UIColorButton
        android:id="@+id/btn_fcolor"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_below="@id/txt_icon"
        android:layout_marginTop="24dp"
        android:layout_toRightOf="@id/txt_fcolor"
        android:background="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txt_alpha"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_fcolor"
        android:layout_marginTop="26dp"
        android:text="@string/alpha" />

    <SeekBar
        android:id="@+id/seek_alpha"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@id/txt_fcolor"
        android:layout_marginTop="24dp"
        android:layout_toLeftOf="@+id/txt_alpha_val"
        android:layout_toRightOf="@id/txt_alpha"
        android:paddingStart="7dp" />

    <TextView
        android:id="@+id/txt_alpha_val"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txt_alpha"
        android:layout_marginLeft="5dp"
        android:layout_alignParentEnd="true"/>

    <CheckBox
        android:id="@+id/chk_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/seek_alpha"
        android:layout_marginTop="10dp"
        android:text="@string/annot_lock"
        android:textSize="12sp" />

</RelativeLayout>