<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_back"
    android:orientation="vertical"
    android:padding="4dp" >

    <LinearLayout
        android:id="@+id/add_bookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/add_bookmark_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_add"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:text="@string/bookmark_add"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/show_bookmarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/show_bookmarks_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_bookmarks"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:text="@string/bookmark_show"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/save_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/save"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:text="@string/save"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/print"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/print_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/btn_print"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:text="@string/print"
            android:gravity="center_vertical"/>

    </LinearLayout>

</LinearLayout>