<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/bar_bg_color"
        android:layout_height="54dp"
        android:baselineAligned="false">
        <com.radaee.util.RDLinearLayout
            android:id="@+id/btn_recent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_00"
                android:src="@drawable/btn_outline"
                android:layout_width="match_parent"
                android:layout_height="30dp">
            </ImageView>
            <TextView
                android:text="@string/tag_recent"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:textColor="@color/bar_text_color"
                android:layout_height="20dp">
            </TextView>
        </com.radaee.util.RDLinearLayout>
        <com.radaee.util.RDLinearLayout
            android:id="@+id/btn_files"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_01"
                android:src="@drawable/btn_view"
                android:layout_width="match_parent"
                android:layout_height="30dp">
            </ImageView>
            <TextView
                android:text="@string/tag_files"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:textColor="@color/bar_text_color"
                android:layout_height="20dp">
            </TextView>
        </com.radaee.util.RDLinearLayout>
        <com.radaee.util.RDLinearLayout
            android:id="@+id/btn_nav"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_02"
                android:src="@drawable/ic_grid_folder0"
                android:layout_width="match_parent"
                android:layout_height="30dp">
            </ImageView>
            <TextView
                android:text="@string/tag_navigate"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:textColor="@color/bar_text_color"
                android:layout_height="20dp">
            </TextView>
        </com.radaee.util.RDLinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="54dp"
        android:orientation="vertical" />
    <com.radaee.util.RDBGView
        android:id="@+id/vw_menu_back"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>