<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/menu_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_10"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:src="@drawable/ic_grid_file"
            android:layout_width="60dp"
            android:layout_height="60dp"/>
        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="vertical"
            android:layout_toEndOf="@id/img_10"
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <TextView
                android:id="@+id/txt_name"
                android:textColor="@color/menu_text_color"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
            <TextView
                android:id="@+id/txt_info"
                android:textColor="@color/menu_text_color"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/toolbar_icon_color"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>
    <RelativeLayout
        android:id="@+id/btn_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_00"
            android:paddingStart="10dp"
            android:src="@drawable/btn_remove"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_toEndOf="@id/img_00"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/browser_file_delete"
            android:textColor="@color/menu_text_color" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/btn_remove_rec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_02"
            android:paddingStart="10dp"
            android:src="@drawable/btn_remove"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_toEndOf="@id/img_02"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/browser_file_delete_recent"
            android:textColor="@color/menu_text_color" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_01"
            android:paddingLeft="10dp"
            android:src="@drawable/btn_share"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/img_01"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/browser_file_share"
            android:textColor="@color/menu_text_color"
            android:layout_toEndOf="@id/img_01"
            android:paddingStart="10dp" />
    </RelativeLayout>
</LinearLayout>
